# loom

./: .dockerignore  .editorconfig  .env.dev  .env.dev.dist  .env.test  .env.test.dist  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  entrypoint.sh  justfile  loom.dbdiagram  rustfmt.toml
core/: Cargo.toml
core/_migrations/admin/: 20251206152405_create_permission_events_partition.down.sql
core/_migrations/tenant/: 20251206152403_create_time_entry_events_partition.down.sql  20251206152403_create_time_entry_events_partition.up.sql  20251206152404_create_project_events_partition.up.sql  20251206152407_create_contact_events_partition.up.sql  20251206152408_create_location_events_partition.up.sql
core/crates/adapters/: Cargo.toml
core/crates/adapters/src/: lib.rs
core/crates/adapters/src/sea_query_sqlx/: migrate.rs  mod.rs
core/crates/application/: Cargo.toml
core/crates/application/src/: lib.rs
core/crates/application/src/handlers/: mod.rs
core/crates/domain/: Cargo.toml
core/crates/domain/src/: lib.rs  shared.rs
core/crates/domain/src/shared/: value_objects.rs
core/crates/domain/src/tenant/: aggregate.rs  mod.rs  value_objects.rs
core/crates/infrastructure/: Cargo.toml
core/crates/infrastructure-impl/: Cargo.toml
core/crates/infrastructure-impl/src/: lib.rs
core/crates/infrastructure-impl/src/sea_query_sqlx/: mod.rs
core/crates/infrastructure/src/: integrity.rs  lib.rs
core/crates/infrastructure/src/config/: database.rs  mod.rs
core/crates/infrastructure/src/database/: connection.rs  database_uri_factory.rs  initialize.rs  migrate.rs  mod.rs  tenant_database_name_builder.rs
core/crates/infrastructure/src/event_bus/: mod.rs
core/crates/infrastructure/src/event_store/: append.rs  get_last_aggregate_record.rs  insert.rs  mod.rs
core/crates/migrations/admin/: Cargo.toml
core/crates/migrations/admin/src/: lib.rs  m20251214_102201_create_events_table.rs  m20251215_183831_create_snapshots_table.rs  main.rs
core/crates/migrations/shared/: Cargo.toml
core/crates/migrations/shared/src/: lib.rs
core/crates/migrations/tenant/: Cargo.toml
core/crates/migrations/tenant/src/: lib.rs  m20251214_102155_create_events_table.rs  m20251215_183826_create_snapshots_table.rs  main.rs
core/crates/modules/: Cargo.toml
core/crates/modules/src/: lib.rs
core/crates/modules/src/shared/: value_objects.rs
core/crates/shared/: Cargo.toml
core/crates/shared/src/: lib.rs
core/crates/with_lifecycle/: Cargo.toml
core/crates/with_lifecycle/src/: lib.rs
interfaces/gui/: Cargo.toml
loom/: Cargo.toml
loom-core/: Cargo.toml
loom-core/src/: lib.rs  permissions.rs  validation.rs
loom-core/src/admin/: authenticator.rs  mod.rs
loom-core/src/admin/permission/: mod.rs
loom-core/src/admin/permission/application/: commands.rs  queries.rs  views.rs
loom-core/src/admin/permission/domain/: aggregates.rs  events.rs  interfaces.rs
loom-core/src/admin/user/: mod.rs
loom-core/src/admin/user/application/: commands.rs  mod.rs  queries.rs  views.rs
loom-core/src/admin/user/domain/: aggregates.rs  events.rs  interfaces.rs  mod.rs
loom-core/src/admin/user/use_cases/: mod.rs
loom-core/src/admin/workspace/: mod.rs
loom-core/src/admin/workspace_role/: mod.rs
loom-core/src/shared/: mod.rs
loom-core/src/tenant/: mod.rs
loom-core/src/tenant/activity/: mod.rs
loom-core/src/tenant/activity_rate/: mod.rs
loom-core/src/tenant/customer/: mod.rs
loom-core/src/tenant/project/: mod.rs
loom-core/src/tenant/project_rate/: mod.rs
loom-core/src/tenant/tag/: mod.rs
loom-core/src/tenant/timesheet/: mod.rs
loom-infrastructure/: Cargo.toml
loom-infrastructure-impl/: Cargo.toml
loom-infrastructure-impl/src/: lib.rs
loom-infrastructure-impl/src/sea_query_sqlx/: mod.rs
loom-infrastructure-impl/src/sea_query_sqlx/admin/: authentication.rs  mod.rs  projectors.rs
loom-infrastructure-impl/src/sea_query_sqlx/infrastructure/: mod.rs  pool.rs
loom-infrastructure-impl/src/sea_query_sqlx/tenant/: mod.rs  projectors.rs
loom-infrastructure-impl/tests/integration/: integration_tests.rs
loom-infrastructure-impl/tests/integration/database/: mod.rs  postgres.rs  sqlite.rs
loom-infrastructure-impl/tests/integration/user/: mod.rs
loom-infrastructure/src/: integrity.rs  lib.rs  query.rs
loom-infrastructure/src/config/: application.rs  database.rs  mod.rs
loom-infrastructure/src/database/: database_uri_factory.rs  initialize.rs  migrate.rs  mod.rs  tenant_database_name_builder.rs
loom-infrastructure/src/event_sourcing/: mod.rs
loom-migrations/loom-admin-migrations/: Cargo.toml
loom-migrations/loom-admin-migrations/src/: lib.rs  m20251214_102200_create_event_streams_table.rs  m20251214_102201_create_events_table.rs  m20251215_183831_create_snapshots_table.rs  m20260325_185315_create_users_projection_table.rs  m20260406_000001_create_permissions_table.rs  m20260406_000002_create_workspaces_projection_table.rs  m20260406_000003_create_workspace_roles_projection_table.rs  m20260406_000004_create_workspace_user_roles_projection_table.rs  m20260406_000005_create_workspace_user_permissions_projection_table.rs  m20260406_000006_create_workspace_role_permissions_projection_table.rs  m20260410_000001_seed_permissions.rs  m20260410_000002_add_user_settings.rs  m20260410_000003_add_workspace_settings.rs  m20260410_000004_fix_date_format_strings.rs  m20260410_000005_add_aggregate_type_to_event_streams.rs  main.rs
loom-migrations/loom-shared-migrations/: Cargo.toml
loom-migrations/loom-shared-migrations/src/: lib.rs
loom-presentation/gui/: Cargo.toml  Dioxus.toml
loom-shared/: Cargo.toml
loom-shared/src/: event_sourcing.rs  lib.rs
loom-tests/: Cargo.toml
loom-tests/src/: lib.rs
loom/src/: auth.rs  authorization.rs  error.rs  lib.rs  setup.rs  user_settings.rs  workspace.rs
loom/src/tenant/: activity.rs  activity_rate.rs  customer.rs  mod.rs  project.rs  project_rate.rs  tag.rs  timesheet.rs
loom/src/tenant/user/: controllers.rs
loom/tests/security/: auth_tests.rs  authorization_tests.rs  mod.rs
presentation/gui/: Cargo.toml
(+190 files in other folders)
