[workspace]
members = [
    "loom",
    "loom-core",
    "loom-infrastructure",
    "loom-infrastructure-impl",
    "loom-migrations/loom-admin-migrations",
    "loom-migrations/loom-shared-migrations",
    "loom-migrations/loom-tenant-migrations",
    "loom-shared",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
anyhow = "1.0.73"
async-trait = "0.1.89"
chrono = "0.4"
dotenvy = "0.15.7"
embassy-futures = "0.1.2"
hex = "0.4.3"
regex = "1.12.3"
serde = { version="1.0", "features"=['derive'] }
serde_json = "1.0"
serde_with = "3.17.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.21.0", features = ["v7"] }

[workspace.lints.clippy]
# Enforce correctness and best practices
all = { level = "deny" }
correctness = { level = "deny" }
complexity = { level = "deny" }
perf = { level = "deny" }
style = { level = "deny" }
# Strict: pedantic + nursery for consistency and future-proofing
pedantic = { level = "warn" }
nursery = { level = "warn" }
