[workspace]
members = [
    "crates/application",
    "crates/domain",
    "crates/infrastructure",
    "crates/migrations/admin", 
    "crates/migrations/shared",
    "crates/migrations/tenant",
]
resolver = "3"

[workspace.package]
name = "loom"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.89"
dotenvy = "0.15.7"
embassy-futures = "0.1.2"
tracing = "0.1.44"
regex = "1.12.2"
serde = "1.0"
thiserror = "2.0.17"
url = "2.5.7"
tokio = { version = "1.49.0", features = ["full"] }

[workspace.lints.clippy]
# Enforce correctness and best practices
all = { level = "deny" }
correctness = { level = "deny" }
complexity = { level = "deny" }
perf = { level = "deny" }
style = { level = "deny" }
# Strict: pedantic + nursery for consistency and future-proofing
pedantic = { level = "warn" }
nursery = { level = "warn" }
