[workspace]
members = [
    "crates/modules",
    "crates/infrastructure",
    "crates/infrastructure-impl",
    "crates/migrations/admin",
    "crates/migrations/shared",
    "crates/migrations/tenant",
    "crates/shared",
    "crates/with_lifecycle",
]
resolver = "3"

[workspace.package]
name = "loom"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.89"
chrono = "0.4"
dotenvy = "0.15.7"
embassy-futures = "0.1.2"
hex = "0.4.3"
regex = "1.12.3"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.16.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
url = "2.5.8"
uuid = { version = "1.21.0", features = ["v7"] }

[workspace.lints.clippy]
# Enforce correctness and best practices
all = { level = "deny" }
correctness = { level = "deny" }
complexity = { level = "deny" }
perf = { level = "deny" }
style = { level = "deny" }
# Strict: pedantic + nursery for consistency and future-proofing
pedantic = { level = "warn" }
nursery = { level = "warn" }
