[package]
name = "loom-core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
strip = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
eventually = { version = "0.5", git = "https://github.com/get-eventually/eventually-rs" }
eventually-any = { version = "0.1", git = "https://github.com/NavilaLabs/eventually-any", features = [
  "snapshots",
] }
eventually-projection = { version = "0.1", git = "https://github.com/NavilaLabs/eventually-projection" }
eventually-macros = { version = "0.1", git = "https://github.com/get-eventually/eventually-rs" }
hex = { workspace = true }
loom-infrastructure-impl = { path = "../loom-infrastructure-impl" }
rand = "0.10.0"
sea-query = { version = "1.0.0-rc.28", optional = true }
sea-query-sqlx = { version = "0.8.0-rc.11", features = ["sqlx-any", "runtime-tokio-rustls", "with-json", "with-chrono", "with-time", "with-uuid", "with-rust_decimal"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio"], optional = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt", "rt-multi-thread"] }
loom-tests = { path = "../loom-tests" }
with-lifecycle = { path = "../with-lifecycle" }

[features]
default = ["sqlite"]
sqlite = ["eventually-any/sqlite", "eventually-projection/sqlite", "loom-infrastructure-impl/sqlite", "dep:sea-query", "dep:sea-query-sqlx", "sqlx/sqlite"]
postgres = ["eventually-any/postgres", "eventually-projection/postgres", "loom-infrastructure-impl/postgres", "dep:sea-query", "dep:sea-query-sqlx", "sqlx/postgres"]

[lints]
workspace = true
