[package]
name = "loom-core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
strip = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
eventually = { version = "0.5", git = "https://github.com/get-eventually/eventually-rs" }
eventually-macros = { version = "0.1", git = "https://github.com/get-eventually/eventually-rs" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
loom-tests = { path = "../loom-tests" }
with-lifecycle = { path = "../with-lifecycle" }

[lints]
workspace = true
