[package]
name = "loom-infrastructure-impl"
version.workspace = true
edition.workspace = true

[dependencies]
loom-admin-migrations = { path = "../loom-migrations/loom-admin-migrations" }
loom-infrastructure = { path = "../loom-infrastructure" }
loom-tenant-migrations = { path = "../loom-migrations/loom-tenant-migrations" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
embassy-futures = { workspace = true }
eventually = { version = "0.5.0", features = ["serde-json"], git = "https://github.com/get-eventually/eventually-rs", optional = true }
sea-orm = { version = "2.0.0-rc.28", optional = true, default-features = false, features = ["sqlx-postgres", "sqlx-sqlite"] }
sea-query = { version = "1.0.0-rc.28", optional = true }
serde_json = { workspace = true }
sea-query-sqlx = { version = "0.8.0-rc.11", features = ["sqlx-any", "runtime-tokio-rustls", "with-json", "with-chrono", "with-time", "with-uuid", "with-rust_decimal"], optional = true }
sea-query-binder = { version = "0.7.0", features = ["sqlx-any"] }
sqlx = { version = "0.8.6", features = ["postgres", "sqlite", "runtime-tokio"], optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
loom-shared = { path = "../loom-shared" }
with-lifecycle = { path = "../with-lifecycle" }

[features]
default = ["sea-query-sqlx", "eventually"]
sea-query-sqlx = ["dep:sea-orm", "dep:sea-query", "dep:sea-query-sqlx", "dep:sqlx"]
eventually = ["dep:eventually"]

[[test]]
name = "integration_infrastructure"
path = "tests/integration/integration_tests.rs"

[lints]
workspace = true
