[package]
name = "loom-infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde-vars = "0.3.1"
serde_yaml = "0.9"
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
loom-tests = { path = "../loom-tests" }
with-lifecycle = { path = "../with-lifecycle" }

[lints]
workspace = true
