[package]
name = "loom-shared"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
