[package]
name = "loom-tests"
version.workspace = true
edition.workspace = true

[dependencies]
dotenvy = { workspace = true }
embassy-futures.workspace = true
loom-infrastructure = { path = "../loom-infrastructure" }
loom-infrastructure-impl = { path = "../loom-infrastructure-impl" }
url = { workspace = true }
sqlx = { workspace = true, features = ["any"] }
tracing = { workspace = true }

[lints]
workspace = true
