[package]
name = "loom"
version.workspace = true
edition.workspace = true

[[bin]]
name = "admin-projection-daemon"
path = "src/bin/admin_projection_daemon.rs"

[dependencies]
anyhow = "1"
dotenvy = { workspace = true }
eventually = { version = "0.5", git = "https://github.com/get-eventually/eventually-rs" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
loom-core = { path = "../loom-core" }
loom-infrastructure = { path = "../loom-infrastructure" }
loom-infrastructure-impl = { path = "../loom-infrastructure-impl" }

[features]
default = ["sea-query-sqlx"]
sea-query-sqlx = ["loom-infrastructure-impl/sea-query-sqlx"]
sqlite = ["loom-infrastructure-impl/sqlite"]
postgres = ["loom-infrastructure-impl/postgres"]

[lints]
workspace = true
