[package]
name = "loom"
version.workspace = true
edition.workspace = true

[[bin]]
name = "admin-projection-daemon"
path = "src/bin/admin_projection_daemon.rs"

[[bin]]
name = "tenant-projection-daemon"
path = "src/bin/tenant_projection_daemon.rs"

[[test]]
name = "security"
path = "tests/security/mod.rs"
required-features = ["sqlite"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = { workspace = true }
eventually = { version = "0.5", git = "https://github.com/get-eventually/eventually-rs" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
loom-core = { path = "../loom-core" }
loom-infrastructure = { path = "../loom-infrastructure" }
loom-infrastructure-impl = { path = "../loom-infrastructure-impl" }

[dev-dependencies]
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
loom-tests = { path = "../loom-tests" }
serial_test = "3.0"
tokio = { workspace = true }
with-lifecycle = { path = "../with-lifecycle" }

[features]
default = ["sea-query-sqlx"]
sea-query-sqlx = ["loom-infrastructure-impl/sea-query-sqlx"]
sqlite = ["loom-infrastructure-impl/sqlite"]
postgres = ["loom-infrastructure-impl/postgres"]

[lints]
workspace = true
