[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
]

[workspace.package]
name = "loom-gui"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
dioxus = { version = "0.7.1" }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
