[package]
name = "loom-admin-migrations"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
name = "loom_admin_migrations"
path = "src/lib.rs"

[dependencies]
loom-shared-migrations = { path = "../loom-shared-migrations" }

tokio = { version = "1", features = ["sync", "macros", "rt"] }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.20"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
]

[features]
default = ["sqlite"]
postgres = ["sea-orm-migration/postgres"]
sqlite = ["sea-orm-migration/sqlite"]
