[package]
name = "loom-shared-migrations"
version.workspace = true
edition.workspace = true

[dependencies]
evento-sql-migrator = { version = "2.0.0-alpha.13", default-features = false }
thiserror = { workspace = true }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.20"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
]

[features]
default = ["sqlite"]
postgres = ["evento-sql-migrator/postgres"]
sqlite = ["evento-sql-migrator/sqlite"]

[lints]
workspace = true
