[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
]

[workspace.package]
name = "loom-gui"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
dioxus = "0.7"
dioxus-free-icons = { version = "0.10", features = ["hero-icons-solid"] }
dioxus-i18n = "0.5"
unic-langid = "0.9.6"
dotenvy = "0.15.7"
chrono = "0.4"
chrono-tz = { version = "0.10", features = ["serde"] }

statig = "0.3"
validator = { version = "0.19", features = ["derive"] }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
loom-core = { path = "../../loom-core" }

# Patch dioxus-fullstack to gate its wasm-specific deps (gloo-net, js-sys,
# wasm-bindgen, wasm-bindgen-futures, wasm-streams) on wasm32 only.
# This prevents js-sys thread-local statics from panicking at runtime when
# the desktop binary tries to access them on native (non-wasm) targets.
[patch.crates-io]
dioxus-fullstack = { path = "vendor/dioxus-fullstack" }

[workspace.lints.clippy]
# Enforce correctness and best practices
all = { level = "deny" }
correctness = { level = "deny" }
complexity = { level = "deny" }
perf = { level = "deny" }
style = { level = "deny" }
# Strict: pedantic + nursery for consistency and future-proofing
pedantic = { level = "warn" }
nursery = { level = "warn" }
