[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
adapters = { path = "../adapters" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }

async-trait = { workspace = true }

[features]
default = []
sea-query-sqlx-postgres = ["adapters/sea-query-sqlx-postgres"]
sea-query-sqlx-sqlite = ["adapters/sea-query-sqlx-sqlite"]

[lints]
workspace = true
