[package]
name = "domain"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
strip = true

[dependencies]
rand = "0.9.2"
seahash = "4.1.0"
uuid = { version = "1.19", features = ["v7"] }
wasm-bindgen = "0.2"

[lints]
workspace = true
