[package]
name = "domain"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
strip = true

[dependencies]
chrono = { workspace = true }
hex = { workspace = true }
rand = "0.9.2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.20.0", features = ["v7"] }
wasm-bindgen = "0.2"

[lints]
workspace = true
