[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
admin-migrations = { path = "../migrations/admin" }
shared-migrations = { path = "../migrations/shared" }
tenant-migrations = { path = "../migrations/tenant" }

async-trait = { workspace = true }
dotenvy = { workspace = true }
embassy-futures = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
sea-query = { version = "0.32.7", optional = true }
sea-query-sqlx = { version = "0.8.0-rc.11", features = ["sqlx-any", "runtime-tokio-rustls", "with-json", "with-chrono", "with-time", "with-uuid", "with-rust_decimal"], optional = true }
serde = { workspace = true }
serde-vars = "0.3.1"
serde_yaml = "0.9.33"
sqlx = { version = "0.8.6", features = ["postgres", "sqlite", "runtime-tokio"], optional = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["sea-query-sqlx"]
sea-query-sqlx = ["dep:sea-query", "dep:sea-query-sqlx", "dep:sqlx"]


[lints]
workspace = true
