[package]
name = "modules"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
strip = true

[dependencies]
chrono = { workspace = true }
hex = { workspace = true }
rand = "0.10.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
