[package]
name = "migrations-shared"
version.workspace = true
edition.workspace = true

[dependencies]

[dependencies.sea-orm-migration]
version = "2.0.0-rc.20"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
]

[features]
default = []
sea-orm-sqlx-postgres = ["sea-orm-migration/sqlx-postgres"]
sea-orm-sqlx-sqlite = ["sea-orm-migration/sqlx-sqlite"]

[lints]
workspace = true
