[package]
name = "tenant-migrations"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
name = "tenant_migrations"
path = "src/lib.rs"

[dependencies]
shared-migrations = { path = "../shared" }

tokio = { version = "1", features = ["sync", "macros", "rt"] }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.20"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
]

[features]
default = []
postgres = ["sea-orm-migration/sqlx-postgres"]
sqlite = ["sea-orm-migration/sqlx-sqlite"]
